# PyP-BEAGLE

./: CHANGELOG.md  MANIFEST.in  README.md  README.rst  VERSION  setup.cfg  setup.py  shippable.yml
.github/: workflows
PyBANGS/: bangs_filters.py  bangs_multinest_catalogue.py  bangs_pdf.py  bangs_photometry.py  bangs_posterior_predictive_checks.py  bangs_residual_photometry.py  bangs_summary_catalogue.py  bangs_test_photometry.py  bangs_utils.py  convertAsciiToFits.py  test_pdf.py  test_photometry.py
PyP-BANGS/: bangs_pdf.py  bangs_photometry.py  bangs_posterior_predictive_checks.py  bangs_spectra.py  bangs_test_photometry.py  bangs_test_spectra.py  bangs_utils.py
PyP-BEAGLE/: __init__.py  bangs_filters.py  bangs_multinest_catalogue.py  bangs_pdf.py  bangs_photometry.py  bangs_posterior_predictive_checks.py  bangs_spectra.py  bangs_summary_catalogue.py  bangs_test_photometry.py  bangs_test_spectra.py  bangs_utils.py  beagle_calibration_correction.py  beagle_filters.py  beagle_mock_catalogue.py  beagle_multinest_catalogue.py  beagle_multiprocess.py  beagle_observed_catalogue.py  beagle_parsers.py  beagle_pdf.py  beagle_photometry.py  beagle_posterior_predictive_checks.py  beagle_residual_photometry.py  beagle_spectra.py  beagle_spectral_indices.py  beagle_summary_catalogue.py  beagle_utils.py  command_line.py  conftest.py  emission_lines.json  postprocess_beagle_results.py  postprocess_beagle_spectra.py  significant_digits.py  summary_catalogue.json
dependencies/: FillBetweenStep.py  WeightedKDE.py  walker_random_sampling.py
files/: params_names_mock.json  (+1 more)
(+16 files in other folders)
