[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = PyBANGS
description = Package for the post-processing of BANGS runs
long_description = 
author = Jacopo Chevallard
author_email = jacopo.chevallard@gmail.com
license = BSD
url = 
edit_on_github = True
github_project = jacopo-chevallard/PyBANGS 
